# bwg-data-stuff

./: .dockerignore  .env.example  .gitignore  ATTRIBUTIONS.md  Cargo.toml  Dockerfile  README.md  compose.yml  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
data/: README.md
injections/: manifest.ts  setup.ts
injections/hello-world/: app.vue
injections/settings/: app.vue
injections/shared/: api.ts  dom.ts  geoblock.ts  navigation.ts  settings.ts  store.ts
src/: config.rs  main.rs  middleware.rs  refresh.rs  scheduler.rs  state.rs
src/routes/: admin.rs  geoblocks.rs  index.rs  info.rs  mod.rs
