[package]
name = "bwg-data-stuff"
description = "Simple API that do extra stuff via Bookwalker Global data"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.9.2"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }
zstd = "0.13.3"
tokio = { version = "1.53.1", features = ["full"] }
reqwest = { version = "0.13.4", features = ["stream"] }
axum = "0.8.9"
tempfile = "3.27.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rust_iso3166 = "0.2.0"
futures-util = { version = "0.3.33", default-features = false, features = ["std"] }
anyhow = "1.0.104"
dotenvy = "0.15.7"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
